# Seo_Analyzer

./: .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  01_add_vector_schema.sql  AI_SEO_Tool_BRD.docx  Dockerfile  Makefile  Project_Learning.md  README.md  alembic.ini  docker-compose.yml  langgraph_state.sqlite  langgraph_state.sqlite-shm  langgraph_state.sqlite-wal  project_memory_BRD.md  pyproject.toml  requirements-dev.txt  requirements.txt  supabase_schema.sql  test_embed.py  uv_commands.txt
.github/workflows/: ci.yml
alembic/: env.py
app/: main.py  scripts.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  chat.py  crawler.py  seo.py  users.py  ws.py
app/controllers/: auth_controller.py  seo_graph_controller.py  user_controller.py
app/core/: config.py  exceptions.py  llm_factory.py  logging.py  security.py  supabase.py
app/crud/: base.py  user.py
app/db/: base.py  init_db.py  session.py  supabase.py
app/dependencies/: auth.py
app/graph/: nodes.py  state.py  workflow.py
app/middlewares/: logging.py
app/models/: __init__.py  crawl.py  user.py
app/schemas/: auth.py  chat.py  common.py  seo.py  user.py
app/services/: competitor_scraper.py  crawler_service.py  embedding_service.py  rag_service.py  seo_ai.py  technical_audit.py
app/utils/: helpers.py
frontend/src/: App.tsx  index.css
scraper/scraper/: items.py  middlewares.py  pipelines.py  settings.py
scraper/scraper/spiders/: seo_spider.py  site_seo_spider.py  site_spider.py
supabase_sql/: supabase_schema.sql
tests/: conftest.py
tests/integration/: test_auth.py  test_health.py  test_users.py
tests/unit/: test_config.py  test_security.py
