# =============================================================================
# Project Metadata
# =============================================================================

[project]
name = "fastapi-template"
version = "1.0.0"
description = "A production-ready FastAPI boilerplate with async support, JWT auth, and best practices."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
keywords = ["fastapi", "boilerplate", "template", "async", "api"]
dependencies = [
    "beautifulsoup4>=4.15.0",
    "black==24.8.0",
    "celery==5.4.0",
    "email-validator==2.2.0",
    "factory-boy==3.3.1",
    "faker==28.0.0",
    "fastapi==0.115.0",
    "gunicorn==23.0.0",
    "httpx==0.27.0",
    "langchain>=1.3.11",
    "langchain-google-genai>=3.2.0",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.8",
    "mypy==1.11.0",
    "passlib[bcrypt]==1.7.4",
    "pre-commit==3.8.0",
    "pydantic==2.9.0",
    "pydantic-settings==2.5.0",
    "pytest==8.3.0",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.12",
    "redis==5.1.0",
    "ruff==0.6.0",
    "scrapy>=2.17.0",
    "structlog==24.4.0",
    "supabase>=2.16.0",
    "textstat>=0.7.13",
    "uvicorn[standard]==0.30.0",
]

# =============================================================================
# Ruff - Linter & Formatter
# =============================================================================

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "S101",   # allow assert in tests
    "B008",   # allow function calls in default args (Depends())
    "S105",   # allow hardcoded password (for settings defaults)
    "S106",   # allow hardcoded password (for settings defaults)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]
"alembic/**/*.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# =============================================================================
# Black - Code Formatter
# =============================================================================

[tool.black]
target-version = ["py312"]
line-length = 120

# =============================================================================
# MyPy - Static Type Checker
# =============================================================================

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# =============================================================================
# Pytest - Testing
# =============================================================================

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# =============================================================================
# Coverage
# =============================================================================

[tool.coverage.run]
source = ["app"]
omit = [
    "app/db/migrations/*",
    "alembic/*",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
fail_under = 30

[project.scripts]
dev = "app.scripts:dev"
